[package]
name = "seed-brute"
version = "0.1.0"
edition = "2024"

[dependencies]
bip39       = "1.1"
bitcoin     = "0.29"
getrandom   = "0.2"
clap        = "4.1"
env_logger  = "0.10"
log         = "0.4"
rayon       = "1.6"

# Для метрик
prometheus  = "0.14"
lazy_static = "1.4"
hyper       = { version = "0.14", features = ["full"] }
tokio       = { version = "1.29", features = ["rt", "macros"] }

# Для таймаут-а в Command
wait-timeout = "0.2"
